--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 
   <head>
       <title>
-        Giffinder
+        What Movie was that again?®
       </title>
       
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-      <script src="js/script.js" async></script>
+      <script src="script.js" async></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      <link type="text/css" rel="stylesheet" href="css/style.css" />
+      <link type="text/css" rel="stylesheet" href="styles.css" />
   </head>
   <body>
-  </body>
-  
+        <link rel="shortcut icon" href="download.png" type="image/x-icon">
+        <div class="container text-center">
+      <h1> What Movie Was That?  </h1>
+      <input placeholder="Movie Title" id="Add_Title">
+      <br>
+      <button id="button">Search</button>
+      <div class="results"></div>
+  </body> 
