--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="shortcut icon" href="download.png" type="image/x-icon">
         <div class="container text-center">
       <h1> What Movie Was That?  </h1>
-      <input placeholder="Movie Title" id="Add_Title">
+      Enter Movie Name: <input placeholder="Movie Title" id="Add_Title">
       <br>
       <button id="button">Search</button>
       <div class="results"></div>
